--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-     <section class="Welcome">
+     <section id="Welcome">
     <center>
     <ul class="Menu">
-        <li class="links">My favorite</li>
-        <li class="links">About</li>
-        <li class="links">My Work</li>
+        <li class="links"><a class="#Welcome">My favorite</a></li>
+        <li class="links"> <a class="#About"> About</a></li>
+        <li class="links"> <a class="#My-Work">My Work</a></li>
         <li class="links">My Inspiration</li>
         <li class="links">Contacts</li>
         </ul>
     </center>
-     <img src="https://images.unsplash.com/photo-1618782802992-edccc4948ee1?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxODk3OTkzOQ&ixlib=rb-1.2.1&q=85">
+     <img src="https://images.unsplash.com/photo-1618782802992-edccc4948ee1?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxODk3OTkzOQ&ixlib=rb-1.2.1&q=85" class="img" >
             <h2>My Favorite Hobby Reading books</h2>
     </section>
-  <section class="About">
+  <section id="About">
       <h2>About</h2>
     <div class="line"></div>
   <p>My hobby is reading interesting i like to read story books and i also like to read the history of the world i am 11 years old and read in class 7th standard. Now i know very well that reading is very good habit which can make me a complete. This hobby can be developed by anyone however i got this naturally.Reading book keep one always happy and busy. It is a good source of enjoyment, knowledge, inspiration and instruction. its makes us disciplined, loyal, punctual and most importantaly a succesful person in the life.</p>
+      <a class="if"><iframe width="700" height="394" src="https://www.youtube.com/embed/muuWRKYi09s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
   </section>
+    <section id="My-Work">
+    <h2>My Work</h2>
+        <div class="line"></div>
+         <p class="text-primary">Space-encyclopaedia</p>
+        <img src="s3.jpg" class="img-responsive book">
+        <p class="p_modal">The universe is bigger than you can ever imagine and it is full of fascinating facts that will astound you! This Space. Encyclopaedia is your guide to the infinite wonders of outer space. Browse through the pages and know more about galaxies, planets, stars and much, much more!<br>
+    </section>
 </body>
 </html>
