--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
      <section id="Welcome">
     <center>
     <ul class="Menu">
-        <li class="links"><a class="#Welcome">My favorite</a></li>
-        <li class="links"> <a class="#About"> About</a></li>
-        <li class="links"> <a class="#My-Work">My Work</a></li>
+        <li class="links"><a href="#Welcome">My favorite</a></li>
+        <li class="links"> <a href="#About"> About</a></li>
+        <li class="links"> <a href="#My-Work">My Work</a></li>
         <li class="links">My Inspiration</li>
         <li class="links">Contacts</li>
         </ul>
@@ -30,7 +30,7 @@
     <section id="My-Work">
     <h2>My Work</h2>
         <div class="line"></div>
-         <p class="text-primary">Space-encyclopaedia</p>
+         <p class="text-primary Work">Space-encyclopaedia</p>
         <img src="s3.jpg" class="img-responsive book">
         <p class="p_modal">The universe is bigger than you can ever imagine and it is full of fascinating facts that will astound you! This Space. Encyclopaedia is your guide to the infinite wonders of outer space. Browse through the pages and know more about galaxies, planets, stars and much, much more!<br>
     </section>
