--- a/index.html
+++ b/index.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Project 59</title>
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-     <section id="Welcome">
-    <center>
-    <ul class="Menu">
-        <li class="links"><a href="#Welcome">My favorite</a></li>
-        <li class="links"> <a href="#About"> About</a></li>
-        <li class="links"> <a href="#My-Work">My Work</a></li>
-        <li class="links">My Inspiration</li>
-        <li class="links">Contacts</li>
-        </ul>
-    </center>
-     <img src="https://images.unsplash.com/photo-1618782802992-edccc4948ee1?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxODk3OTkzOQ&ixlib=rb-1.2.1&q=85" class="img" >
-            <h2>My Favorite Hobby Reading books</h2>
+    <section id="Welcome">
+        <center>
+            <ul class="Menu">
+                <li class="links"><a href="#Welcome">My favorite</a></li>
+                <li class="links"> <a href="#About"> About</a></li>
+                <li class="links"> <a href="#My-Work">My Work</a></li>
+                <li class="links"> <a href="#My-inspiration">My Inspiration</a></li>
+                <li class="links"><a href="#Contacts">Contacts</a></li>
+            </ul>
+        </center>
+        <img src="https://images.unsplash.com/photo-1618782802992-edccc4948ee1?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYxODk3OTkzOQ&ixlib=rb-1.2.1&q=85" class="img">
+        <h2>My Favorite Hobby Reading books</h2>
     </section>
-  <section id="About">
-      <h2>About</h2>
-    <div class="line"></div>
-  <p>My hobby is reading interesting i like to read story books and i also like to read the history of the world i am 11 years old and read in class 7th standard. Now i know very well that reading is very good habit which can make me a complete. This hobby can be developed by anyone however i got this naturally.Reading book keep one always happy and busy. It is a good source of enjoyment, knowledge, inspiration and instruction. its makes us disciplined, loyal, punctual and most importantaly a succesful person in the life.</p>
-      <a class="if"><iframe width="700" height="394" src="https://www.youtube.com/embed/muuWRKYi09s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
-  </section>
-    <section id="My-Work">
-    <h2>My Work</h2>
+    <section id="About">
+        <h2>About</h2>
         <div class="line"></div>
-         <p class="text-primary Work">Space-encyclopaedia</p>
-        <img src="s3.jpg" class="img-responsive book">
-        <p class="p_modal">The universe is bigger than you can ever imagine and it is full of fascinating facts that will astound you! This Space. Encyclopaedia is your guide to the infinite wonders of outer space. Browse through the pages and know more about galaxies, planets, stars and much, much more!<br>
+        <p>My hobby is reading interesting books i like to read story books and i also like to read the history of the world i am 11 years old and read in class 7th standard. Now i know very well that reading is very good habit which can make me a complete. This hobby can be developed by anyone however i got this naturally.Reading book keep one always happy and busy. It is a good source of enjoyment, knowledge, inspiration and instruction. its makes us disciplined, loyal, punctual and most importantaly a succesful person in the life.</p>
+        <a class="if"><iframe width="700" height="394" src="https://www.youtube.com/embed/muuWRKYi09s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></a>
+    </section>
+    <section id="My-Work">
+        <h2>My Work</h2>
+        <div class="line"></div>
+        <p class="text-primary Work">The best of akbar birbal</p>
+        <img src="51-s5fEOrhL._SX351_BO1,204,203,200_.jpg" class="img-responsive book">
+        <p>The is story about akbar and his courtier birbal, this book has many stories about akbar and birbal <br>
+            this book has one of the famous story of akbar birbal. Known as 'Birbal ki khichadi' and how birbal get his name birbal
+    </section>
+    <section id="My-inspiration">
+        <h1>My Inspiration</h1>
+        <div class="line"></div>
+        <h3>He is a good Cricketer in india he made the Helicopter Shot Famous</h3>
+        <p>Click on the picture to know about the person</p>
+        <div> 
+            <a href="https://en.wikipedia.org/wiki/MS_Dhoni" target="_blank">
+            <img src="Mahendra_Singh_Dhoni_January_2016_(cropped).jpg" class="Cricketer">
+            </a>
+        </div>
+    </section> 
+    <section id="Contacts">
+        <h1>Contacts</h1>
+        <div class="line"></div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346024.072037828!2d74.98547159009492!3d25.97047319617631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3976c54f0e183717%3A0x67fb6e4e6f2cf9eb!2sWhiteHat%20Jr%20Gwalior!5e0!3m2!1sen!2sin!4v1625401326072!5m2!1sen!2sin" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-lg-3 col-md-3 col-sm-3 col-xs-4 "></iframe>
+        <img src="WIN_20201127_12_11_25_Pro.jpg" class=my-img>
+        <a href="mailto:my@gmail.com?Subject=Hi" id="Myname">
+        
+            <i class="fa-fa envelope">&nbsp;<span id="Myname">divyanshkumar5432@gmail.com</span></i>
+            
+        </a>
     </section>
 </body>
+
 </html>
