--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
         <div class="line"></div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7346024.072037828!2d74.98547159009492!3d25.97047319617631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3976c54f0e183717%3A0x67fb6e4e6f2cf9eb!2sWhiteHat%20Jr%20Gwalior!5e0!3m2!1sen!2sin!4v1625401326072!5m2!1sen!2sin" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="col-lg-3 col-md-3 col-sm-3 col-xs-4 "></iframe>
         <img src="WIN_20201127_12_11_25_Pro.jpg" class=my-img>
+        <div>
         <a href="mailto:my@gmail.com?Subject=Hi" id="Myname">
         
-            <i class="fa-fa envelope">&nbsp;<span id="Myname">divyanshkumar5432@gmail.com</span></i>
-            
+            <i class="fa fa-envelope">&nbsp;<span id="Myname">divyanshkumar5432@gmail.com</span></i>           
         </a>
+        </div>
+            <div>
+        <a href="mailto:myistagramID.com?Subject=Hi" id="Myname">
+             <i class="fa fa-instagram">&nbsp;<span id="Myname">My Instagram ID</span></i>
+        </a>
+        </div>
     </section>
 </body>
 
